# aim

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
headers/: crossplatformutils.hpp  enumerate.hpp  events_dispenser.hpp  hashmap.hpp  input_aggregator.hpp  ioactor.hpp  keybindings.hpp  keylogger.hpp  lockable.hpp  main.hpp  modes.hpp  monad.hpp  mutex_lock.hpp  queue.hpp  reactor.hpp  virtualkeys.hpp
headers/render/: block.hpp  colour.hpp
src/: events_dispenser.cpp  main.cpp  reactor.cpp
